--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 
 
 
-    <title>React App</title>
+    <title>JS Form</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
